<resources>
    <string name="app_name">TaskManager</string>
    <string name="task_title_hint">Enter a title for the task...</string>
    <string name="task_title_label">Title</string>
    <string name="task_details_label">Details</string>
    <string name="task_solved_label">Solved</string>
    <string name="first_task_button">First</string>
    <string name="last_task_button">Last</string>
    <string name="date_picker_title">Date of task:</string>
    <string name="time_picker_title">Time of task:</string>

    <string-array name="dates">
        <item>Established date</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>A week later</item>
        <item>A month later</item>
        <item>Pick a date...</item>
    </string-array>

    <string-array name="times">
        <item>Established time</item>
        <item>Early morning</item>
        <item>Late morning</item>
        <item>Early afternoon</item>
        <item>Late afternoon</item>
        <item>Pick a time...</item>
    </string-array>

    <string name="short_date_format">EEE, MMM d, yyyy</string>
    <string name="long_date_format">EEEE, MMMM d, yyyy</string>
    <string name="time_format">HH:mm</string>
    <string name="date_time_prep">at</string>

    <string name="add_new_task_text">Add new task</string>
    <string name="delete_task_text">Delete task</string>

    <plurals name="task_count_plural">
        <item quantity="one">%1$d task</item>
        <item quantity="other">%1$d tasks</item>
    </plurals>

    <string name="add_new_user_text">Add new user...</string>
    <string name="add_new_user_button">Add new user</string>
    <string name="new_user_login_hint">Enter new user\'s login...</string>
    <string name="new_user_name_hint">Enter new user\'s name...</string>
    <string name="new_user_empty_fields_toast">Fill in login and name!</string>
    <string name="login_exist_toast">This login already exist!</string>
    <string name="delete_user_text">Delete user</string>
    <string name="tasks_of_user_title">%1$s\'s tasks</string>

    <plurals name="user_count_plural">
        <item quantity="one">%1$d user</item>
        <item quantity="other">%1$d users</item>
    </plurals>

    <string name="task_customer_text">Customer is %s</string>
    <string name="choose_task_executor_text">Choose executor...</string>
    <string name="task_executor_text">Executor is %s</string>
    <string name="no_task_executor_text">No executor</string>
    <string name="task_count_as_customer_text">%s as customer</string>
    <string name="task_count_as_executor_text">%s as executor</string>
    <string name="common_task_count">%1$d as customer &amp; %2$d as executor</string>

    <string name="send_report_button">Send task report</string>
    <string name="task_report_text">Task: %1$s.
        The task should be solved before %2$s. %3$s, the customer is %4$s, and %5$s.</string>
    <string name="task_report_solved">The case is solved</string>
    <string name="task_report_unsolved">The case is not solved</string>
    <string name="task_report_no_executor">there is no executor</string>
    <string name="task_report_executor">the executor is %s</string>
    <string name="task_report_subject">TaskManager Task Report</string>
    <string name="send_report">Send task report via</string>

    <string name="add_new_item_text">Add new item</string>

    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">login</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_users">Users</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="sign_in_login_hint">Enter login...</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_incorrect_toast">Incorrect credentials!</string>

</resources>
