<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_destinations"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks_black"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_users_black"
            android:title="@string/menu_users" />
    </group>

    <group
        android:id="@+id/nav_operations"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign_out_black"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
